NJR-Experiments/WPI/wpi/checkerframework_results/simpleTestNew-before-wpi.txt
../dataset/simpleTestNew/src/Game.java:9: error: (argument) $$ 4 $$ game $$ MoveValidator.setGame $$ @UnderInitialization @NonNull GameImpl $$ @Initialized @NonNull Game $$ ( 210, 214 ) $$ incompatible argument for parameter game of MoveValidator.setGame.
        mValidator.setGame(this);
                           ^
  found   : @UnderInitialization @NonNull GameImpl
  required: @Initialized @NonNull Game
../dataset/simpleTestNew/src/Game.java:13: error: (initialization.fields.uninitialized) $$ 1 $$ moveValidator $$ ( 264, 337 ) $$ the constructor does not initialize fields: moveValidator
    public GameImpl( MonFactory factory) {
           ^
../dataset/simpleTestNew/src/Game.java:14: error: (method.invocation) $$ 3 $$ setFactory(MonFactory) $$ @UnderInitialization @NonNull GameImpl $$ @Initialized @NonNull GameImpl $$ ( 311, 330 ) $$ call to setFactory(MonFactory) not allowed on the given receiver.
        setFactory(factory);
                  ^
  found   : @UnderInitialization @NonNull GameImpl
  required: @Initialized @NonNull GameImpl
../dataset/simpleTestNew/src/Game.java:42: error: (initialization.fields.uninitialized) $$ 1 $$ game $$ ( 938, 983 ) $$ the constructor does not initialize fields: game
    public PlayerDependentMoveValidator() {
           ^
../dataset/simpleTestNew/src/Game.java:45: error: (initialization.fields.uninitialized) $$ 1 $$ game $$ ( 989, 1113 ) $$ the constructor does not initialize fields: game
    public PlayerDependentMoveValidator(Game game) {
           ^
../dataset/simpleTestNew/src/Game.java:46: error: (method.invocation) $$ 3 $$ setGame(Game) $$ @UnderInitialization @NonNull PlayerDependentMoveValidator $$ @Initialized @NonNull PlayerDependentMoveValidator $$ ( 1046, 1064 ) $$ call to setGame(Game) not allowed on the given receiver.
        this.setGame(game);
                    ^
  found   : @UnderInitialization @NonNull PlayerDependentMoveValidator
  required: @Initialized @NonNull PlayerDependentMoveValidator
../dataset/simpleTestNew/src/Game.java:59: error: (initialization.fields.uninitialized) $$ 1 $$ game $$ ( 1302, 1338 ) $$ the constructor does not initialize fields: game
    public SimpleMoveValidator() {
           ^
../dataset/simpleTestNew/src/Game.java:75: error: (initialization.field.uninitialized) $$ 1 $$ game $$ ( 1717, 1736 ) $$ the default constructor does not initialize field game
    private  Game game;
                  ^
8 errors
